# elgato-stream-deck-

./: Cargo.toml  install.sh  readme.md
config/: stream-deck.json
src/: app.rs  config.rs  main.rs
src/controls/: audio_toggle.rs  brightness.rs  launcher.rs  mod.rs  now_playing.rs  timer.rs  volume.rs
src/hardware/: backend.rs  mod.rs  stub.rs
src/hardware/render/: font.rs  mod.rs
src/system/: audio.rs  audio_switch.rs  availability.rs  brightness.rs  desktop.rs  mod.rs  now_playing.rs
src/util/: icons.rs  mod.rs
