[package]
name = "streamdeck_ctrl"
version = "0.1.0"
edition = "2024"

[features]
default = ["hardware"]
hardware = ["dep:elgato-streamdeck"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
elgato-streamdeck = { version = "0.11.1", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
once_cell = "1.19"
regex = "1.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
resvg = { version = "0.42", default-features = false, features = ["text"] }
tiny-skia = "0.11"
usvg = { version = "0.42", default-features = false, features = ["text"] }

[dev-dependencies]
tempfile = "3.10"
